--- a/api/_assets/tailwind-EAVC7Y76.css
+++ b/api/_assets/tailwind-EAVC7Y76.css
@@ -1280,6 +1280,11 @@ select {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -1333,6 +1338,16 @@ select {
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 82 164 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(116 165 235 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
